<resources>
    <string name="app_name">ReindeerClicker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reindeer_clicker">Reindeer Clicker</string>
    <string name="start">Start</string>
    <string name="store">Store!</string>
    <string name="score">SCORE:</string>
    <string name="gain_2_per_click">Gain 2 Per Click</string>
    <string name="gain_3_per_click">Gain 3 Per Click</string>
    <string name="gain_5_per_click">Gain 5 Per Click</string>
    <string name="gain_10_per_click">Gain 10 Per Click</string>
    <string name="gain_20_per_click">Gain 20 Per Click</string>
    <string name="dummy">Dummy</string>
</resources>