<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clStore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreFragment" >

    <Button
        android:id="@+id/btnShop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnShop2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvShop1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnShop3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvShop2"
        app:layout_constraintTop_toBottomOf="@+id/btnShop1" />

    <Button
        android:id="@+id/btnShop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnShop4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvShop3"
        app:layout_constraintTop_toBottomOf="@+id/btnShop2" />

    <Button
        android:id="@+id/btnShop4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnShop5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvShop4"
        app:layout_constraintTop_toBottomOf="@+id/btnShop3" />

    <Button
        android:id="@+id/btnShop5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvShop5"
        app:layout_constraintTop_toBottomOf="@+id/btnShop4" />

    <TextView
        android:id="@+id/tvShop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/gain_2_per_click"
        app:layout_constraintBottom_toBottomOf="@+id/btnShop1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnShop1" />

    <TextView
        android:id="@+id/tvShop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/gain_3_per_click"
        app:layout_constraintBottom_toBottomOf="@+id/btnShop2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnShop2" />

    <TextView
        android:id="@+id/tvShop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/gain_5_per_click"
        app:layout_constraintBottom_toBottomOf="@+id/btnShop3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnShop3" />

    <TextView
        android:id="@+id/tvShop4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/gain_10_per_click"
        app:layout_constraintBottom_toBottomOf="@+id/btnShop4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnShop4" />

    <TextView
        android:id="@+id/tvShop5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/gain_20_per_click"
        app:layout_constraintBottom_toBottomOf="@+id/btnShop5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnShop5" />
</androidx.constraintlayout.widget.ConstraintLayout>